--- a/trunk/Obi/Obi/Dialogs/Preferences.ar.resx
+++ b/trunk/Obi/Obi/Dialogs/Preferences.ar.resx
@@ -199,10 +199,10 @@
     <value>مربع القائمة، استخدم الأسهم لأعلى وأسفل للتحرك داخل مربع المراجعة</value>
   </data>
   <data name="m_CheckBoxListView.Location" type="System.Drawing.Point, System.Drawing">
-    <value>195, 307</value>
+    <value>636, 74</value>
   </data>
   <data name="m_CheckBoxListView.Size" type="System.Drawing.Size, System.Drawing">
-    <value>267, 81</value>
+    <value>341, 324</value>
   </data>
   <data name="m_CheckBoxListView.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -220,10 +220,10 @@
     <value>3</value>
   </data>
   <data name="m_grpBoxChkBoxListView.Location" type="System.Drawing.Point, System.Drawing">
-    <value>171, 306</value>
+    <value>630, 53</value>
   </data>
   <data name="m_grpBoxChkBoxListView.Size" type="System.Drawing.Size, System.Drawing">
-    <value>405, 100</value>
+    <value>353, 351</value>
   </data>
   <data name="m_grpBoxChkBoxListView.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -2091,7 +2091,7 @@
     <value>Audio cleanup max file size</value>
   </data>
   <data name="m_CleanUpFileSizeNumericUpDown.Location" type="System.Drawing.Point, System.Drawing">
-    <value>209, 92</value>
+    <value>209, 148</value>
   </data>
   <data name="m_CleanUpFileSizeNumericUpDown.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2121,7 +2121,7 @@
     <value>NoControl</value>
   </data>
   <data name="mlblCleanupFileSize.Location" type="System.Drawing.Point, System.Drawing">
-    <value>4, 92</value>
+    <value>5, 150</value>
   </data>
   <data name="mlblCleanupFileSize.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2157,7 +2157,7 @@
     <value>NoControl</value>
   </data>
   <data name="m_btn_speak.Location" type="System.Drawing.Point, System.Drawing">
-    <value>467, 123</value>
+    <value>467, 206</value>
   </data>
   <data name="m_btn_speak.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2193,7 +2193,7 @@
     <value>NoControl</value>
   </data>
   <data name="labelTTSvoice.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 128</value>
+    <value>3, 211</value>
   </data>
   <data name="labelTTSvoice.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2223,7 +2223,7 @@
     <value>Flat</value>
   </data>
   <data name="mTTSvoiceCombo.Location" type="System.Drawing.Point, System.Drawing">
-    <value>220, 123</value>
+    <value>220, 208</value>
   </data>
   <data name="mTTSvoiceCombo.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2250,7 +2250,7 @@
     <value>المدة بالميللي ثانية</value>
   </data>
   <data name="m_OperationDurationUpDown.Location" type="System.Drawing.Point, System.Drawing">
-    <value>335, 153</value>
+    <value>335, 249</value>
   </data>
   <data name="m_OperationDurationUpDown.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2292,7 +2292,7 @@
     <value>الفجوة (تقسيم تلقائي للعبارات)</value>
   </data>
   <data name="m_cbOperation.Location" type="System.Drawing.Point, System.Drawing">
-    <value>160, 153</value>
+    <value>160, 248</value>
   </data>
   <data name="m_cbOperation.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2322,13 +2322,13 @@
     <value>NoControl</value>
   </data>
   <data name="mlbOperation.Location" type="System.Drawing.Point, System.Drawing">
-    <value>76, 156</value>
+    <value>60, 250</value>
   </data>
   <data name="mlbOperation.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
   <data name="mlbOperation.Size" type="System.Drawing.Size, System.Drawing">
-    <value>70, 16</value>
+    <value>70, 250</value>
   </data>
   <data name="mlbOperation.TabIndex" type="System.Int32, mscorlib">
     <value>28</value>
@@ -2364,7 +2364,7 @@
     <value>مرتفع</value>
   </data>
   <data name="mNoiseLevelComboBox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>464, 89</value>
+    <value>167, 179</value>
   </data>
   <data name="mNoiseLevelComboBox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
@@ -2397,7 +2397,7 @@
     <value>NoControl</value>
   </data>
   <data name="label8.Location" type="System.Drawing.Point, System.Drawing">
-    <value>351, 94</value>
+    <value>67, 182</value>
   </data>
   <data name="label8.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
@@ -2430,7 +2430,7 @@
     <value>NoControl</value>
   </data>
   <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>461, 156</value>
+    <value>461, 251</value>
   </data>
   <data name="label3.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -2463,7 +2463,7 @@
     <value>Top, Left, Right</value>
   </data>
   <data name="mChannelsTextbox.Location" type="System.Drawing.Point, System.Drawing">
-    <value>464, 63</value>
+    <value>155, 106</value>
   </data>
   <data name="mChannelsTextbox.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
@@ -2496,7 +2496,7 @@
     <value>معدل عينة المشروع:</value>
   </data>
   <data name="mSampleRateTextbox.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
+    <value>Top, Left</value>
   </data>
   <data name="mSampleRateTextbox.Location" type="System.Drawing.Point, System.Drawing">
     <value>160, 63</value>
@@ -2508,7 +2508,7 @@
     <value>True</value>
   </data>
   <data name="mSampleRateTextbox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>130, 22</value>
+    <value>120, 22</value>
   </data>
   <data name="mSampleRateTextbox.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -2532,13 +2532,13 @@
     <value>القنوات الافتراضية:</value>
   </data>
   <data name="mChannelsCombo.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
+    <value>Top, Left</value>
   </data>
   <data name="mChannelsCombo.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
   </data>
   <data name="mChannelsCombo.Location" type="System.Drawing.Point, System.Drawing">
-    <value>466, 61</value>
+    <value>157, 104</value>
   </data>
   <data name="mChannelsCombo.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
@@ -2571,7 +2571,7 @@
     <value>NoControl</value>
   </data>
   <data name="labelChannels.Location" type="System.Drawing.Point, System.Drawing">
-    <value>357, 66</value>
+    <value>43, 108</value>
   </data>
   <data name="labelChannels.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 0, 4, 0</value>
@@ -2604,7 +2604,7 @@
     <value>معدل العينة الافتراضي</value>
   </data>
   <data name="mSampleRateCombo.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
+    <value>Top, Left</value>
   </data>
   <data name="mSampleRateCombo.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -2619,7 +2619,7 @@
     <value>True</value>
   </data>
   <data name="mSampleRateCombo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 24</value>
+    <value>138, 24</value>
   </data>
   <data name="mSampleRateCombo.TabIndex" type="System.Int32, mscorlib">
     <value>18</value>
@@ -2676,7 +2676,7 @@
     <value>اسم جهاز الإخراج الصوتي</value>
   </data>
   <data name="mOutputDeviceCombo.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
+    <value>Top, Left</value>
   </data>
   <data name="mOutputDeviceCombo.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -2691,7 +2691,7 @@
     <value>True</value>
   </data>
   <data name="mOutputDeviceCombo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>443, 24</value>
+    <value>350, 24</value>
   </data>
   <data name="mOutputDeviceCombo.TabIndex" type="System.Int32, mscorlib">
     <value>16</value>
@@ -2712,7 +2712,7 @@
     <value>اسم جهاز الإدخال</value>
   </data>
   <data name="mInputDeviceCombo.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
+    <value>Top, Left</value>
   </data>
   <data name="mInputDeviceCombo.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -2727,7 +2727,7 @@
     <value>True</value>
   </data>
   <data name="mInputDeviceCombo.Size" type="System.Drawing.Size, System.Drawing">
-    <value>443, 24</value>
+    <value>350, 24</value>
   </data>
   <data name="mInputDeviceCombo.TabIndex" type="System.Int32, mscorlib">
     <value>14</value>
@@ -2856,10 +2856,10 @@
     <value>Flat</value>
   </data>
   <data name="m_btnRecordInLocalDrive.Location" type="System.Drawing.Point, System.Drawing">
-    <value>507, 93</value>
+    <value>470, 96</value>
   </data>
   <data name="m_btnRecordInLocalDrive.Size" type="System.Drawing.Size, System.Drawing">
-    <value>100, 31</value>
+    <value>85, 31</value>
   </data>
   <data name="m_btnRecordInLocalDrive.TabIndex" type="System.Int32, mscorlib">
     <value>9</value>
@@ -2886,7 +2886,7 @@
     <value>171, 97</value>
   </data>
   <data name="m_txtRecordInLocalDrive.Size" type="System.Drawing.Size, System.Drawing">
-    <value>330, 22</value>
+    <value>280, 22</value>
   </data>
   <data name="m_txtRecordInLocalDrive.TabIndex" type="System.Int32, mscorlib">
     <value>8</value>
@@ -3003,7 +3003,7 @@
     <value>4</value>
   </data>
   <data name="m_NumImportTolerance.Location" type="System.Drawing.Point, System.Drawing">
-    <value>172, 165</value>
+    <value>182, 165</value>
   </data>
   <data name="m_NumImportTolerance.ShowHelp" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -3090,7 +3090,7 @@
     <value>دليل سركيبت برنامج  Pipeline  </value>
   </data>
   <data name="mPipelineTextbox.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
+    <value>Top, Left</value>
   </data>
   <data name="mPipelineTextbox.Location" type="System.Drawing.Point, System.Drawing">
     <value>172, 55</value>
@@ -3102,7 +3102,7 @@
     <value>True</value>
   </data>
   <data name="mPipelineTextbox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>328, 22</value>
+    <value>281, 22</value>
   </data>
   <data name="mPipelineTextbox.TabIndex" type="System.Int32, mscorlib">
     <value>5</value>
@@ -3123,7 +3123,7 @@
     <value>دليل المشروع الافتراضي:</value>
   </data>
   <data name="mDirectoryTextbox.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left, Right</value>
+    <value>Top, Left</value>
   </data>
   <data name="mDirectoryTextbox.Location" type="System.Drawing.Point, System.Drawing">
     <value>172, 13</value>
@@ -3135,7 +3135,7 @@
     <value>True</value>
   </data>
   <data name="mDirectoryTextbox.Size" type="System.Drawing.Size, System.Drawing">
-    <value>328, 22</value>
+    <value>281, 22</value>
   </data>
   <data name="mDirectoryTextbox.TabIndex" type="System.Int32, mscorlib">
     <value>2</value>
@@ -3153,7 +3153,7 @@
     <value>9</value>
   </data>
   <data name="mPipelineBrowseButton.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Right</value>
+    <value>Top</value>
   </data>
   <data name="mPipelineBrowseButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -3162,7 +3162,7 @@
     <value>NoControl</value>
   </data>
   <data name="mPipelineBrowseButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>508, 50</value>
+    <value>286, 54</value>
   </data>
   <data name="mPipelineBrowseButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
@@ -3171,7 +3171,7 @@
     <value>True</value>
   </data>
   <data name="mPipelineBrowseButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>100, 31</value>
+    <value>85, 31</value>
   </data>
   <data name="mPipelineBrowseButton.TabIndex" type="System.Int32, mscorlib">
     <value>6</value>
@@ -3261,7 +3261,7 @@
     <value>12</value>
   </data>
   <data name="mBrowseButton.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Right</value>
+    <value>Top</value>
   </data>
   <data name="mBrowseButton.FlatStyle" type="System.Windows.Forms.FlatStyle, System.Windows.Forms">
     <value>Flat</value>
@@ -3270,7 +3270,7 @@
     <value>NoControl</value>
   </data>
   <data name="mBrowseButton.Location" type="System.Drawing.Point, System.Drawing">
-    <value>508, 8</value>
+    <value>286, 12</value>
   </data>
   <data name="mBrowseButton.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>4, 4, 4, 4</value>
@@ -3279,7 +3279,7 @@
     <value>True</value>
   </data>
   <data name="mBrowseButton.Size" type="System.Drawing.Size, System.Drawing">
-    <value>100, 31</value>
+    <value>85, 31</value>
   </data>
   <data name="mBrowseButton.TabIndex" type="System.Int32, mscorlib">
     <value>3</value>
@@ -3345,7 +3345,7 @@
     <value>True</value>
   </data>
   <data name="mTab.Size" type="System.Drawing.Size, System.Drawing">
-    <value>624, 402</value>
+    <value>988, 402</value>
   </data>
   <data name="mTab.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -3393,7 +3393,7 @@
     <value>8, 16</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>656, 473</value>
+    <value>1015, 501</value>
   </data>
   <data name="$this.Font" type="System.Drawing.Font, System.Drawing">
     <value>Microsoft Sans Serif, 9.75pt</value>
